[gd_scene load_steps=9 format=3 uid="uid://bpsrn8jfwa4s7"]

[ext_resource type="Script" path="res://PLAYER/movement.gd" id="1_vh7s0"]
[ext_resource type="Texture2D" uid="uid://mlmo5n7uwnoi" path="res://animammation.png" id="2_4h6c1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cth3j"]
size = Vector2(21, 29.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j3234"]
size = Vector2(23.5, 34)

[sub_resource type="Animation" id="Animation_6nis8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [28]
}

[sub_resource type="Animation" id="Animation_krppt"]
resource_name = "idle"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.11853, 0.251429, 0.390869, 0.522325, 0.6631, 0.898586),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 30, 35, 36, 37, 42, 43]
}

[sub_resource type="Animation" id="Animation_plynv"]
resource_name = "walking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0828375, 0.147287, 0.217865, 0.284766, 0.366377, 0.439408, 0.507534, 0.581791, 0.653595, 0.729408, 0.806639, 0.884352, 0.961603),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 7, 8, 9, 14, 15, 16, 21, 16, 15, 14, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vv5si"]
_data = {
"RESET": SubResource("Animation_6nis8"),
"idle": SubResource("Animation_krppt"),
"walking": SubResource("Animation_plynv")
}

[node name="player" type="CharacterBody2D"]
collision_layer = 3
safe_margin = 1.0
script = ExtResource("1_vh7s0")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.56601, -15.748)
scale = Vector2(0.964611, 0.984267)
texture = ExtResource("2_4h6c1")
hframes = 7
vframes = 8
frame = 28

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -17)
shape = SubResource("RectangleShape2D_cth3j")

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(-1, -15)
scale = Vector2(1, 0.954583)
shape = SubResource("RectangleShape2D_j3234")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vv5si")
}

[node name="HP_Bar" type="ProgressBar" parent="."]
modulate = Color(0, 0.811765, 0, 1)
self_modulate = Color(0, 0.866667, 0, 1)
offset_left = -23.0
offset_top = -40.0
offset_right = 67.0
offset_bottom = -23.0
scale = Vector2(0.5, 0.5)
show_percentage = false

[node name="atk_cooldown" type="Timer" parent="."]

[node name="Regen" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="player_atk_cooldown" type="Timer" parent="."]

[node name="range_cooldown" type="Timer" parent="."]
wait_time = 7.0

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(6, -14)

[node name="Muzzle" type="Marker2D" parent="Node2D"]
position = Vector2(1, -2)

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="atk_cooldown" to="." method="_on_atk_cooldown_timeout"]
[connection signal="timeout" from="Regen" to="." method="_on_regen_timeout"]
[connection signal="timeout" from="player_atk_cooldown" to="." method="_on_player_atk_cooldown_timeout"]
[connection signal="timeout" from="range_cooldown" to="." method="_on_range_cooldown_timeout"]
